--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sass": "^1.85.1",
     "tailwindcss": "^3.3.0"
   },
   "devDependencies": {
